fix: remove layout shift

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-    border: 1px dashed var(--stroke-default);
+    outline: 1px dashed var(--stroke-highlight);
+    border: 2px dashed transparent;
     border-radius: 0.25rem;
 
     display: grid;
@@ -23,8 +24,8 @@
     }
 
     &:hover, &:has(input:focus) {
-        border-width: 2px;
-        border-color: var(--stroke-highlightt);
+        outline-width: 0;
+        border-color: var(--stroke-highlight);
         background-color: var(--surface-secondary);
         & p{
             color: var(--text-color-tertiary);
